@@ -18,12 +18,14 @@ JSON::MaybeXS             = 1.004004
 Moo                       = 2.005005
 MooX::HandlesVia          = 0.001009
 Path::Tiny                = 0.122
+Pod::Markdown::Github     = 0.04
 Ref::Util                 = 0.204
 Sub::Exporter             = 0.987
 Sub::HandlesVia           = 0.046
 Sub::Install              = 0.929
 Sub::Name                 = 0.27
 Template                  = 3.102
+Text::MultiMarkdown       = 1.000035
 Try::Tiny                 = 0.31
 Type::Tiny                = 2.002001
 Unexpected                = v1.0.5
